--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # 站点配置
 
 baseURL = "https://quenkar.github.io/"
-title = "Hugo 主题 MemE"
+title = "Quenkar"
 languageCode = "zh-CN"
 hasCJKLanguage = true
 # 版权信息（支持 Markdown）
