--- a/config.toml
+++ b/config.toml
@@ -104,7 +104,7 @@ uglyURLs = false
     # 头像
     avatar = "/icons/apple-touch-icon.png"
     # 网站（默认值：baseURL）
-    website = "https://io-oi.me/"
+    website = "https://github.com/QuenKar"
     # 推特
     twitter = "quenkar"
 
@@ -344,7 +344,7 @@ uglyURLs = false
     # 说明：用于 JSON-LD、Open Graph
 
     # 站点的描述
-    siteDescription = "welcome to my blog.。"
+    siteDescription = "welcome to my blog."
     # 说明：用于 HTML 的头部元数据、JSON-LD、
     #      Open Graph、Atom、RSS
 
@@ -353,7 +353,7 @@ uglyURLs = false
     # 注意：请保持此格式，更改数字
 
     # 站点的推特帐号
-    siteTwitter = "reuixiy"
+    siteTwitter = "quenkar"
     # 说明：用于 Twitter Cards
 
 
